--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "libphonenumber-js": "^1.11.16",
+    "maz-ui": "^3.49.2",
     "pinia": "^2.3.0",
     "vant": "^4.9.10",
     "vue": "^3.5.13",
