--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nutui/nutui": "^4.3.13",
     "axios": "^1.7.9",
     "libphonenumber-js": "^1.11.16",
     "maz-ui": "^3.49.2",
@@ -18,6 +19,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@nutui/auto-import-resolver": "^1.0.0",
     "@vant/auto-import-resolver": "^1.2.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "less": "^4.2.1",
