--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "libphonenumber-js": "^1.11.16",
     "maz-ui": "^3.49.2",
     "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "vant": "^4.9.10",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
